# Endoscopy

Arduino/: Endoscopy.ino
Arduino/libraries/Arduino_LSM9DS1/src/: LSM9DS1.cpp  LSM9DS1.h
Arduino/libraries/Arduino_LSM9DS1Extern/: library.properties
Arduino/libraries/Arduino_LSM9DS1Extern/src/: Arduino_LSM9DS1Extern.h  LSM9DS1Extern.cpp  LSM9DS1Extern.h
Arduino/libraries/Nano33BleHID/: keywords.txt
Arduino/libraries/Nano33BleHID/src/: Mbed_BLE_HID.cpp  Nano33BleHID.h
Arduino/libraries/Nano33BleHID/src/services/: HIDEndoscopyService.cpp  HIDEndoscopyService.h  dummy  dummy_now
Fusion/: compilacion.txt
Fusion/Fusion/: CMakeLists.txt  Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionCalibration.c  FusionCalibration.h  FusionMath.c  FusionMath.h  FusionOffset.h
Fusion/Fusion/Examples/Advanced/: Advanced-Example.vcxproj  Advanced-Example.vcxproj.filters  cmake_install.cmake
Fusion/Fusion/Examples/Simple/: Simple-Example.vcxproj  Simple-Example.vcxproj.filters  cmake_install.cmake
Matlab/: procesado_final_3Sensores.mlx  sensor3_log_extIMU5_calibred.txt
Unity/Assets/: CurvedTube.cs  CurvedTube1IMU.cs  CurvedTube2IMU.cs  HIDDataVerifier.cs  SensorObject.cs  TubeKinematics.cs
Unity/Assets/Scripts/: FusionWrapper.cs  KalmanCalculator.cs
Unity/Assets/Scripts/InputSystem/: ENDOSCOPY_CONTROLLER_DInitializer.cs  ENDOSCOPY_CONTROLLER_DeviceState.cs
